@@ -2,5 +2,6 @@ $:.unshift(File.dirname(__FILE__) + '/../../lib')
 require 'cucumber/rake/task'
 
 Cucumber::Rake::Task.new do |t|
-  t.cucumber_opts = "--profile default"
+  profile = ENV['PROFILE'] || 'default'
+  t.cucumber_opts = "--profile #{profile}"
 end
